--- a/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
+++ b/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
@@ -5238,231 +5238,30 @@
         "player_dismissed = df[['id','batsman','non_striker','player_dismissed']]\n",
         "player_dismissed\n",
         "\n",
-        "finishers = player_dismissed[player_dismissed['batsman'] != player_dismissed['player_dismissed']]#[['id','batsman']]\n",
+        "player_dismissed = player_dismissed[player_dismissed['player_dismissed'].isin(['Not Out'])][['id','batsman','non_striker','player_dismissed']]\n",
+        "print(player_dismissed['player_dismissed'].nunique())\n",
+        "# player_dismissed\n",
+        "# finishers = player_dismissed[player_dismissed['batsman'] != player_dismissed['player_dismissed']]#[['id','batsman']]\n",
         "# finishers.rename(columns={'batsman':'finisher'},inplace=True)\n",
         "# finishers = finishers['finisher'].value_counts()[:15]\n",
-        "finishers"
+        "# finishers"
       ],
       "metadata": {
-        "id": "hcBHNluXSWmG",
-        "outputId": "08ce2d6a-54c6-4d72-b194-71dc692ddf52",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 424
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hcBHNluXSWmG",
+        "outputId": "3edd3f52-75ad-40e6-af93-cf2a619cee2a"
       },
       "id": "hcBHNluXSWmG",
-      "execution_count": 275,
+      "execution_count": 283,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "             id      batsman  non_striker player_dismissed\n",
-              "0        335982   RT Ponting  BB McCullum          Not Out\n",
-              "1        335982  BB McCullum   RT Ponting          Not Out\n",
-              "2        335982  BB McCullum   RT Ponting          Not Out\n",
-              "3        335982  BB McCullum   RT Ponting          Not Out\n",
-              "4        335982   RT Ponting  BB McCullum          Not Out\n",
-              "...         ...          ...          ...              ...\n",
-              "193463  1237181      RR Pant      SS Iyer          Not Out\n",
-              "193464  1237181      RR Pant      SS Iyer          Not Out\n",
-              "193465  1237181      RR Pant      SS Iyer          Not Out\n",
-              "193466  1237181      RR Pant      SS Iyer          Not Out\n",
-              "193467  1237181      SS Iyer      RR Pant          Not Out\n",
-              "\n",
-              "[148333 rows x 4 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-8741d17e-156c-41da-85e5-e91538d4507c\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>batsman</th>\n",
-              "      <th>non_striker</th>\n",
-              "      <th>player_dismissed</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>335982</td>\n",
-              "      <td>RT Ponting</td>\n",
-              "      <td>BB McCullum</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>335982</td>\n",
-              "      <td>BB McCullum</td>\n",
-              "      <td>RT Ponting</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>335982</td>\n",
-              "      <td>BB McCullum</td>\n",
-              "      <td>RT Ponting</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>335982</td>\n",
-              "      <td>BB McCullum</td>\n",
-              "      <td>RT Ponting</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>335982</td>\n",
-              "      <td>RT Ponting</td>\n",
-              "      <td>BB McCullum</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>193463</th>\n",
-              "      <td>1237181</td>\n",
-              "      <td>RR Pant</td>\n",
-              "      <td>SS Iyer</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>193464</th>\n",
-              "      <td>1237181</td>\n",
-              "      <td>RR Pant</td>\n",
-              "      <td>SS Iyer</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>193465</th>\n",
-              "      <td>1237181</td>\n",
-              "      <td>RR Pant</td>\n",
-              "      <td>SS Iyer</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>193466</th>\n",
-              "      <td>1237181</td>\n",
-              "      <td>RR Pant</td>\n",
-              "      <td>SS Iyer</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>193467</th>\n",
-              "      <td>1237181</td>\n",
-              "      <td>SS Iyer</td>\n",
-              "      <td>RR Pant</td>\n",
-              "      <td>Not Out</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>148333 rows × 4 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8741d17e-156c-41da-85e5-e91538d4507c')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-8741d17e-156c-41da-85e5-e91538d4507c button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8741d17e-156c-41da-85e5-e91538d4507c');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 275
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
         }
       ]
     },
