--- a/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
+++ b/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
@@ -5236,32 +5236,48 @@
       "cell_type": "code",
       "source": [
         "player_dismissed = df[['id','batsman','non_striker','player_dismissed']]\n",
-        "player_dismissed\n",
         "\n",
-        "player_dismissed = player_dismissed[player_dismissed['player_dismissed'].isin(['Not Out'])][['id','batsman','non_striker','player_dismissed']]\n",
-        "print(player_dismissed['player_dismissed'].nunique())\n",
-        "# player_dismissed\n",
-        "# finishers = player_dismissed[player_dismissed['batsman'] != player_dismissed['player_dismissed']]#[['id','batsman']]\n",
-        "# finishers.rename(columns={'batsman':'finisher'},inplace=True)\n",
-        "# finishers = finishers['finisher'].value_counts()[:15]\n",
-        "# finishers"
+        "player_dismissed = player_dismissed[~player_dismissed['player_dismissed'].isin(['Not Out'])][['id','batsman','non_striker','player_dismissed']]\n",
+        "\n",
+        "finishers = player_dismissed[player_dismissed['batsman'] != player_dismissed['player_dismissed']]#[['id','batsman']]\n",
+        "finishers.rename(columns={'batsman':'finisher'},inplace=True)\n",
+        "finishers = finishers['finisher'].value_counts()[:15]\n",
+        "finishers"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hcBHNluXSWmG",
-        "outputId": "3edd3f52-75ad-40e6-af93-cf2a619cee2a"
+        "outputId": "fb06932c-006c-4755-80fa-80af8d3dc5cb"
       },
       "id": "hcBHNluXSWmG",
-      "execution_count": 283,
+      "execution_count": 290,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "MS Dhoni      12\n",
+              "V Kohli       10\n",
+              "RV Uthappa     8\n",
+              "KD Karthik     8\n",
+              "RG Sharma      7\n",
+              "KA Pollard     6\n",
+              "DA Warner      6\n",
+              "G Gambhir      6\n",
+              "YK Pathan      5\n",
+              "SK Raina       5\n",
+              "JH Kallis      5\n",
+              "RA Jadeja      5\n",
+              "SPD Smith      5\n",
+              "AT Rayudu      4\n",
+              "IK Pathan      4\n",
+              "Name: finisher, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 290
         }
       ]
     },
