--- a/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
+++ b/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 249,
+      "execution_count": null,
       "id": "814c8abc",
       "metadata": {
         "id": "814c8abc"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": null,
       "id": "88532071",
       "metadata": {
         "colab": {
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 251,
+      "execution_count": null,
       "id": "05d849ed",
       "metadata": {
         "scrolled": false,
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 252,
+      "execution_count": null,
       "id": "5e4d89f0",
       "metadata": {
         "colab": {
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 253,
+      "execution_count": null,
       "id": "afeaf27e",
       "metadata": {
         "colab": {
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 254,
+      "execution_count": null,
       "id": "e957c507",
       "metadata": {
         "colab": {
@@ -529,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 255,
+      "execution_count": null,
       "id": "05c99eaf",
       "metadata": {
         "id": "05c99eaf",
@@ -557,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 256,
+      "execution_count": null,
       "id": "b12c5b32",
       "metadata": {
         "id": "b12c5b32",
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": null,
       "id": "1c47bf87",
       "metadata": {
         "colab": {
@@ -681,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": null,
       "metadata": {
         "id": "7fd08f1f",
         "outputId": "b7f21a45-3b9a-4b76-bfad-96aae6a59f0b",
@@ -738,7 +738,7 @@
         "outputId": "49c416f9-8918-4241-df3f-7febc044b7d5"
       },
       "id": "qzMfKJkTERsg",
-      "execution_count": 259,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": null,
       "id": "5ecfe789",
       "metadata": {
         "colab": {
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 261,
+      "execution_count": null,
       "metadata": {
         "id": "0dafe0a8"
       },
@@ -896,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 262,
+      "execution_count": null,
       "id": "0dde4e66",
       "metadata": {
         "id": "0dde4e66"
@@ -924,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 263,
+      "execution_count": null,
       "id": "1dcf890c",
       "metadata": {
         "colab": {
@@ -980,7 +980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 264,
+      "execution_count": null,
       "id": "0f3d1fa4",
       "metadata": {
         "id": "0f3d1fa4",
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": null,
       "id": "65c6287c",
       "metadata": {
         "colab": {
@@ -1082,7 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": null,
       "id": "73b929e2",
       "metadata": {
         "colab": {
@@ -1331,7 +1331,7 @@
         }
       },
       "id": "Po-uwf5qeFKb",
-      "execution_count": 267,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1359,7 +1359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 268,
+      "execution_count": null,
       "id": "5cda30ce",
       "metadata": {
         "colab": {
@@ -1522,8 +1522,8 @@
         "id": "72be4c66"
       },
       "source": [
-        "#####correlation:\n",
-        "- total_runs have correlation of **0.996** with total_balls_faced. With increase in no. of balls faced by batsman, there is an increase in batsman_runs."
+        "#####derived attributes correlation:\n",
+        "- total_runs have very high positive correlation of **0.996** with total_balls_faced( indicates how many balls faced by batsman). With increase in no. of balls faced by batsman, there is an increase in batsman_runs."
       ]
     },
     {
@@ -1538,7 +1538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 269,
+      "execution_count": null,
       "id": "b37608a3",
       "metadata": {
         "colab": {
@@ -1819,7 +1819,7 @@
         }
       },
       "id": "rjKa_vCjjzBC",
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1859,7 +1859,7 @@
         "outputId": "11ddfdff-353a-4b94-aaa3-dbe6e47be373"
       },
       "id": "vHv4b8KmyS56",
-      "execution_count": 271,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,10 +2038,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#####correlation:\n",
-        "1. no. of 6's have correlation of **0.8998** with total balls faced by batsman. As the batsman faces more balls, he gets comfortable in the ptich resulting in hitting more 6's.\n",
+        "#####derived attributes correlation:\n",
+        "1. no. of 6's have high psoitive correlation of **0.8998** with total_balls_faced by batsman. As the batsman faces more balls, he gets comfortable in the pitch resulting in hitting more 6's.\n",
         "\n",
-        "2. no. of 6's have correlation of **0.9257** with total runs scored by batsman. Meaning, with the increase in 6's, total runs scored by the player also increases significantly. Hence, high risk yields higher rewards."
+        "2. no. of 6's have high positive correlation of **0.9257** with total_runs scored by batsman. Meaning, with the increase in 6's, the total runs scored by the batsman also increases significantly. With high risk of scoring a 6, batsman might end up getting dismissed, hence high risk yields high rewards."
       ],
       "metadata": {
         "id": "13YPQEocCjyP"
@@ -2060,7 +2060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 272,
+      "execution_count": null,
       "id": "8a8c13b3",
       "metadata": {
         "colab": {
@@ -2341,7 +2341,7 @@
         }
       },
       "id": "whqU2jsykywj",
-      "execution_count": 297,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2381,7 +2381,7 @@
         "outputId": "3ec38884-8901-40d0-e35e-0025d381a26c"
       },
       "id": "i4dWH_fizBDC",
-      "execution_count": 274,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2560,15 +2560,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### correlations:\n",
-        "<br><br>\n",
-        "1.a) no. of 4's have correlation of **0.9837** with total balls faced by batsman. As the batsman faces more balls, he gets comfortable in the ptich resulting in hitting more 6's.\n",
+        "#####Derived attributes correlations:\n",
+        "<br>\n",
         "\n",
-        "1.b) This value is greater than the one we got for no. of 6's vs total balls faced. Which means it is easier to hit 4's than 6's once a batsman is comfortable in the pitch.\n",
+        "1.a) no. of 4's have high positive correlation of **0.9837** with total_balls_faced by batsman. As the batsman faces more balls, he gets comfortable in the pitch resulting in hitting more 4's.\n",
         "\n",
-        "2.a) no. of 4's have correlation of **0.9839** with total runs scored by batsman. Meaning, with the increase in 4's, total runs scored by the player also increases.\n",
+        "1.b) This value is greater than the one we got for no. of 6's vs total_balls_faced. Which means it is easier to hit 4's than 6's once a batsman is comfortable in the pitch.\n",
         "\n",
-        "2.b) This value is greater than the one we got for no. of 6's vs total runs. Which means it is easier to hit 4's than 6's and the impact of 4's is greater than 6's in the total runs."
+        "2.a) no. of 4's have high positive correlation of **0.9839** with total runs scored by batsman. Meaning, with the increase in 4's, total runs scored by the player also increases.\n",
+        "\n",
+        "2.b) This value is greater than the one we got for no. of 6's vs total_runs. Which means the impact of 4's is greater than 6's in the total runs contribution."
       ],
       "metadata": {
         "id": "hJ8et9-hLdPb"
@@ -2582,12 +2583,12 @@
         "id": "2b16d6b0"
       },
       "source": [
-        "####4: Top 10 bowlers based on wickets taken (in trivial)"
+        "####4: Top 5 bowlers based on wickets taken (in trivial)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 275,
+      "execution_count": null,
       "id": "c965538d",
       "metadata": {
         "colab": {
@@ -2809,7 +2810,7 @@
         }
       },
       "id": "Q-8-XanxlEyx",
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2847,7 +2848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 277,
+      "execution_count": null,
       "id": "c10fee1b",
       "metadata": {
         "scrolled": true,
@@ -3091,7 +3092,7 @@
         }
       },
       "id": "4fdBLTpZluqr",
-      "execution_count": 278,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3119,7 +3120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 279,
+      "execution_count": null,
       "id": "ab10ab0a",
       "metadata": {
         "colab": {
@@ -3277,9 +3278,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "interesting correlations:\n",
+        "Interesting derived attribute correlations:\n",
         "\n",
-        "1. wickets_taken have correlation of **0.9792** with runs_concieved. In order to setup more wickets, the bowler have concieved more runs in the process. High risk yields high rewards."
+        "1. wickets_taken have high positive correlation of **0.9792** with runs_concieved. In order to setup more wickets, the bowler have concieved more runs in the process."
       ],
       "metadata": {
         "id": "QVZ02v-MA9v9"
@@ -3298,7 +3299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 280,
+      "execution_count": null,
       "id": "621587fc",
       "metadata": {
         "colab": {
@@ -3579,7 +3580,7 @@
         }
       },
       "id": "D1mbLRERmRy3",
-      "execution_count": 281,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3607,7 +3608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 282,
+      "execution_count": null,
       "id": "14902426",
       "metadata": {
         "colab": {
@@ -3796,7 +3797,7 @@
       },
       "source": [
         "obvious correlation:\n",
-        "1. overs dealth by bowler have a correlation of **0.9823** with wickets taken. As the bowler deals more overs, he gets better understanding on how to take a wicket.\n"
+        "1. overs have a high positive correlation of **0.9823** with wickets_taken. As the bowler deals more overs, he gets better understanding on how to take a wicket.\n"
       ]
     },
     {
@@ -3823,7 +3824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 283,
+      "execution_count": null,
       "id": "5c068821",
       "metadata": {
         "id": "5c068821",
@@ -4128,7 +4129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 284,
+      "execution_count": null,
       "id": "4b884f8f",
       "metadata": {
         "id": "4b884f8f",
@@ -4443,7 +4444,7 @@
         "outputId": "ed8d3ba2-95bf-4b25-b557-5fcdc2c42544"
       },
       "id": "K8wF5yr42H25",
-      "execution_count": 285,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4744,7 +4745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 286,
+      "execution_count": null,
       "id": "c35a4286",
       "metadata": {
         "id": "c35a4286",
@@ -5037,7 +5038,7 @@
         "outputId": "162136c5-59ea-406f-a3f7-5f2e30be480d"
       },
       "id": "6_xpXuAK26KZ",
-      "execution_count": 287,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5239,7 +5240,7 @@
         }
       },
       "id": "hQddIr2wnxAa",
-      "execution_count": 288,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5349,7 +5350,7 @@
         "outputId": "a60c0d7a-baa6-40db-e2d3-4d68a7c639d0"
       },
       "id": "jWOnZ0xO_ZpC",
-      "execution_count": 289,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5571,7 +5572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 290,
+      "execution_count": null,
       "id": "e613646a",
       "metadata": {
         "id": "e613646a",
@@ -5634,7 +5635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 291,
+      "execution_count": null,
       "id": "3b2cd720",
       "metadata": {
         "id": "3b2cd720",
@@ -5671,7 +5672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 292,
+      "execution_count": null,
       "id": "31902349",
       "metadata": {
         "id": "31902349",
@@ -5748,7 +5749,7 @@
         "outputId": "2ac42449-f60f-4b7a-dc21-36aa3a3d7693"
       },
       "id": "hcBHNluXSWmG",
-      "execution_count": 293,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5787,6 +5788,39 @@
           "execution_count": 293
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 5. "
+      ],
+      "metadata": {
+        "id": "R2xQBJnI37Tk"
+      },
+      "id": "R2xQBJnI37Tk"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "VKohli_matches = df[df[\"batsman\"] == \"V Kohli\"]\n",
+        "best_bowler_against=VKohli_matches[VKohli_matches['is_wicket'] == 1]\n",
+        "best_bowler_against\n",
+        "\n",
+        "count=0\n",
+        "bowler=[]\n",
+        "for i in range(len(best_bowler_against)):\n",
+        "    bowler.append(best_bowler_against['bowler'].iloc[i])\n",
+        "\n",
+        "\n",
+        " \n",
+        "[(i,bowler.count(i)) for i in set(bowler)]"
+      ],
+      "metadata": {
+        "id": "er_5s_LF4DXn"
+      },
+      "id": "er_5s_LF4DXn",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
