--- a/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
+++ b/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
@@ -2039,7 +2039,7 @@
       "cell_type": "markdown",
       "source": [
         "#####derived attributes correlation:\n",
-        "1. no. of 6's have high psoitive correlation of **0.8998** with total_balls_faced by batsman. As the batsman faces more balls, he gets comfortable in the pitch resulting in hitting more 6's.\n",
+        "1. no. of 6's have high positive correlation of **0.8998** with total_balls_faced by batsman. As the batsman faces more balls, he gets comfortable in the pitch resulting in hitting more 6's.\n",
         "\n",
         "2. no. of 6's have high positive correlation of **0.9257** with total_runs scored by batsman. Meaning, with the increase in 6's, the total runs scored by the batsman also increases significantly. With high risk of scoring a 6, batsman might end up getting dismissed, hence high risk yields high rewards."
       ],
