--- a/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
+++ b/IT496_Introduction_to Data_Mining _Lab Assignment_01.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 329,
+      "execution_count": 333,
       "id": "88532071",
       "metadata": {
         "colab": {
@@ -60,7 +60,7 @@
           "height": 312
         },
         "id": "88532071",
-        "outputId": "6dbf004f-59b7-4283-af9d-6b03c4ecb064"
+        "outputId": "737ca476-d95f-4807-d792-6538eecb0a02"
       },
       "outputs": [
         {
@@ -89,7 +89,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1b537472-1063-414b-a396-c4aea6202466\">\n",
+              "  <div id=\"df-b786bc11-e00d-4b6a-a6e1-b72ebc3ab6f2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -196,7 +196,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b537472-1063-414b-a396-c4aea6202466')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b786bc11-e00d-4b6a-a6e1-b72ebc3ab6f2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -247,12 +247,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1b537472-1063-414b-a396-c4aea6202466 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b786bc11-e00d-4b6a-a6e1-b72ebc3ab6f2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1b537472-1063-414b-a396-c4aea6202466');\n",
+              "          const element = document.querySelector('#df-b786bc11-e00d-4b6a-a6e1-b72ebc3ab6f2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -275,12 +275,12 @@
             ]
           },
           "metadata": {},
-          "execution_count": 329
+          "execution_count": 333
         }
       ],
       "source": [
         "# read the csv data\n",
-        "df= pd.read_csv(\"/content/IPL_data/IPL Ball-by-Ball 2008-2020 - IPL Ball-by-Ball 2008-2020.csv\")\n",
+        "df= pd.read_csv('https://raw.githubusercontent.com/Rohanjos97/data-mining-asignments/IPL_dataset/IPL%20Ball-by-Ball%202008-2020%20-%20IPL%20Ball-by-Ball%202008-2020.csv')\n",
         "\n",
         "# getting outline of the dataset\n",
         "df.head(3)"
@@ -1311,7 +1311,7 @@
         "outputId": "7a6c5867-c839-424b-8217-577dd6c2ae90",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 410
         }
       },
       "id": "Po-uwf5qeFKb",
@@ -1799,7 +1799,7 @@
         "outputId": "e70b5a85-fb2c-4df8-ac54-86579fccc781",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 345
+          "height": 410
         }
       },
       "id": "rjKa_vCjjzBC",
@@ -2321,7 +2321,7 @@
         "outputId": "57400d67-ee17-451c-e97d-66d8851cb141",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 410
         }
       },
       "id": "whqU2jsykywj",
@@ -2790,7 +2790,7 @@
         "outputId": "b0204349-f7f2-44e3-f5da-1796eecb4097",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 340
+          "height": 410
         }
       },
       "id": "Q-8-XanxlEyx",
@@ -3072,7 +3072,7 @@
         "outputId": "54e6a4de-f3b6-4dcd-968c-467926541661",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 410
         }
       },
       "id": "4fdBLTpZluqr",
@@ -3560,7 +3560,7 @@
         "outputId": "c3b678a1-e6c9-4027-dee9-b623b5ed0953",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 410
         }
       },
       "id": "D1mbLRERmRy3",
@@ -3815,7 +3815,7 @@
         "outputId": "fb65f1cd-8061-44ee-9ad7-7218d2fca754",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 424
         }
       },
       "outputs": [
@@ -4119,7 +4119,7 @@
         "id": "4b884f8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 676
+          "height": 424
         },
         "outputId": "36a9f5ca-fd3e-4d8f-a002-747b49d09ce6"
       },
@@ -4422,7 +4422,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 676
+          "height": 424
         },
         "id": "K8wF5yr42H25",
         "outputId": "9b783e18-c8fb-48d3-d043-fd17eb3fc513"
@@ -5220,7 +5220,7 @@
         "outputId": "10f06485-8492-4ef8-819f-f3c07a658fb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 342
+          "height": 430
         }
       },
       "id": "hQddIr2wnxAa",
@@ -6017,7 +6017,7 @@
         "outputId": "7e21219c-8867-465f-d802-8e1b801e289e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 446
+          "height": 459
         }
       },
       "outputs": [
